// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package pbentity;

option go_package = "freeroam/app/system/api/pbentity";

import "google/protobuf/timestamp.proto";

message SystemConfig {
    int64                     Id          = 1;  //
    string                    ConfigCode  = 2;  // 配置编码，如 token_validity_period
    string                    ConfigValue = 3;  // 配置值，如 60
    string                    ConfigDesc  = 4;  // 配置说明，如 token有效时长(分钟)
    uint32                    IsDeleted   = 5;  // 是否删除0:否,1:是
    uint64                    CreateBy    = 6;  // 创建人
    uint64                    UpdateBy    = 7;  // 修改人
    uint64                    DeleteBy    = 8;  // 删除人
    google.protobuf.Timestamp CreateAt    = 9;  // 创建时间
    google.protobuf.Timestamp UpdateAt    = 10; // 更新时间
    google.protobuf.Timestamp DeletedAt   = 11; // 删除时间
}