syntax = "proto3";

package admin_login.v1;

option go_package = "./api/admin_member/v1";

service AdminLogin{
  // 获取成员详情
  rpc Login(LoginReq) returns (LoginRes) {}
}

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginRes {
  string token = 1;
  string name = 2;
  string avatar = 3;
  int64 forceExpiresTimeUnix = 4;
}